// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorCard matches snapshot 1`] = `
<ErrorBox>
  <ErrorContent>
    <Span>
      <IconMock
        backgroundColor="transparent"
        backgroundStyle="BackgroundTriangleSmall"
        borderWidth="0.5"
        size="72px"
      />
    </Span>
    <Span>
      Error
    </Span>
  </ErrorContent>
</ErrorBox>
`;

exports[`ErrorCard renders an error message 1`] = `
<ErrorBox>
  <ErrorContent>
    <Span>
      <IconMock
        backgroundColor="transparent"
        backgroundStyle="BackgroundTriangleSmall"
        borderWidth="0.5"
        size="72px"
      />
    </Span>
    <Span>
      Woopsie
    </Span>
  </ErrorContent>
</ErrorBox>
`;
